--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 	    <plugins>
 		  <plugin>
 		   <artifactId>maven-pmd-plugin</artifactId>
+	           <version>3.12.0</version>
 		   <configuration>
 		      <includeTests>true</includeTests>
 		      <minimumTokens>10</minimumTokens>
